# adsland

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml
api/: board_demo.py  main.py
core/autofix/: extend_bleed.py  to_cmyk.py
core/design/: card.py  fonts.py  romanize.py  schema.py
core/intake/: image_to_pdf.py
core/llm/: adapter.py  parsing.py  roles.py
core/orchestrator/: chat.py  policy.py  service.py  session.py  state_machine.py
core/preflight/: adsland_guide.py  contentstream.py  cutline.py  engine.py  report.py
core/products/: schema.py
core/quote/: engine.py  pricebook.yaml
data/samples/: manifest.json
demo-ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: ADSLAND_GUIDE_COVERAGE.md  API.md  DEMO_SCRIPT.md  DEPLOY.md  PLAN.md
evals/: run_dialog_eval.py  run_preflight_eval.py
scripts/: make_portable.ps1  publish.ps1  run_server.ps1
synth/: generate_clean.py  inject_defects.py  manifest.py  showcase.py
tests/: test_adsland_guide.py  test_api.py  test_autofix.py  test_catalog_quote.py  test_chat.py  test_check_black_type.py  test_check_bleed.py  test_check_colorspace.py  test_check_dieline.py  test_check_font_embed.py  test_check_ink_total.py  test_check_min_line.py  test_check_page_count.py  test_check_page_size.py  test_check_resolution.py  test_check_transparency.py  test_check_trim_safety.py  test_design.py  test_dialog_eval.py  test_llm_roles.py  test_policy.py  test_service_integration.py  test_session.py  test_showcase.py  test_state_machine.py  test_synth.py
(+57 files in other folders)
