[project]
name = "adsland"
version = "0.1.0"
description = "AI 인쇄 접수 시스템 프로토타입 — 파일 접수, 검판(프리플라이트), 견적, 확정을 대화형으로 자동화"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pikepdf",
    "pypdfium2",
    "reportlab",
    "Pillow",
    "numpy",
    "pydantic>=2",
    "sqlalchemy>=2",
    "pyyaml",
    "anthropic",
    "httpx",
    "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
